force-app/main/default/objects/Event_Meal_Preference__c/Event_Meal_Preference__c.object-meta.xml
<CustomObject>
    <description>Stores event attendee meal preference records including meal choice, dietary notes, and submission date.</description>
    <label>Event Meal Preference</label>
    <nameField>
        <label>Event Meal Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Meal Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>