force-app/main/default/objects/Event_Meal_Preference__c/fields/Dietary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Notes__c</fullName>
    <description>Free-form text area to capture dietary restrictions or notes for event attendees.</description>
    <label>Dietary Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>