force-app/main/default/objects/Event_Meal_Preference__c/fields/Meal_Choice__c.field-meta.xml
<CustomField>
    <fullName>Meal_Choice__c</fullName>
    <label>Meal Choice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>