force-app/main/default/objects/Event_Meal_Preference__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Date field to record when the meal preference was submitted.</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>